crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__button-bar-45-dark-ascii.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
| y allow   n deny   < back   ^c stop   : cmd |
| y allow   n deny   < back   ^c stop   : cmd |
| n deny   < back   ^c stop   : cmd   ? help  |

 0   0..2   fg=#7aa2f7 bg=#21242c BOLD
 0   2..9   fg=#e6e6e6 bg=#21242c
 0   9..10  fg=#e6e6e6 bg=#111216
 0  10..12  fg=#7aa2f7 bg=#21242c BOLD
 0  12..18  fg=#e6e6e6 bg=#21242c
 0  18..19  fg=#e6e6e6 bg=#111216
 0  19..21  fg=#7aa2f7 bg=#21242c BOLD
 0  21..27  fg=#e6e6e6 bg=#21242c
 0  27..28  fg=#e6e6e6 bg=#111216
 0  28..31  fg=#7aa2f7 bg=#21242c BOLD
 0  31..37  fg=#e6e6e6 bg=#21242c
 0  37..38  fg=#e6e6e6 bg=#111216
 0  38..40  fg=#7aa2f7 bg=#21242c BOLD
 0  40..45  fg=#e6e6e6 bg=#21242c
 1   0..9   fg=#111216 bg=#7aa2f7 BOLD
 1   9..10  fg=#e6e6e6 bg=#111216
 1  10..12  fg=#7aa2f7 bg=#21242c BOLD
 1  12..18  fg=#e6e6e6 bg=#21242c
 1  18..19  fg=#e6e6e6 bg=#111216
 1  19..21  fg=#7aa2f7 bg=#21242c BOLD
 1  21..27  fg=#e6e6e6 bg=#21242c
 1  27..28  fg=#e6e6e6 bg=#111216
 1  28..31  fg=#7aa2f7 bg=#21242c BOLD
 1  31..37  fg=#e6e6e6 bg=#21242c
 1  37..38  fg=#e6e6e6 bg=#111216
 1  38..40  fg=#7aa2f7 bg=#21242c BOLD
 1  40..45  fg=#e6e6e6 bg=#21242c
 2   0..2   fg=#7aa2f7 bg=#21242c BOLD
 2   2..8   fg=#e6e6e6 bg=#21242c
 2   8..9   fg=#e6e6e6 bg=#111216
 2   9..11  fg=#7aa2f7 bg=#21242c BOLD
 2  11..17  fg=#e6e6e6 bg=#21242c
 2  17..18  fg=#e6e6e6 bg=#111216
 2  18..21  fg=#7aa2f7 bg=#21242c BOLD
 2  21..27  fg=#e6e6e6 bg=#21242c
 2  27..28  fg=#e6e6e6 bg=#111216
 2  28..30  fg=#7aa2f7 bg=#21242c BOLD
 2  30..35  fg=#e6e6e6 bg=#21242c
 2  35..36  fg=#e6e6e6 bg=#111216
 2  36..44  fg=#111216 bg=#7aa2f7 BOLD
 2  44..45  fg=#e6e6e6 bg=#111216
