crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__button-bar-45-light-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
| y allow   n deny   < back   ^c stop   : cmd |
| y allow   n deny   < back   ^c stop   : cmd |
| n deny   < back   ^c stop   : cmd   ? help  |

 0   0..2   fg=#2f5bb7 bg=#eceef2 BOLD
 0   2..9   fg=#1c1c1c bg=#eceef2
 0   9..10  fg=#1c1c1c bg=#ffffff
 0  10..12  fg=#2f5bb7 bg=#eceef2 BOLD
 0  12..18  fg=#1c1c1c bg=#eceef2
 0  18..19  fg=#1c1c1c bg=#ffffff
 0  19..21  fg=#2f5bb7 bg=#eceef2 BOLD
 0  21..27  fg=#1c1c1c bg=#eceef2
 0  27..28  fg=#1c1c1c bg=#ffffff
 0  28..31  fg=#2f5bb7 bg=#eceef2 BOLD
 0  31..37  fg=#1c1c1c bg=#eceef2
 0  37..38  fg=#1c1c1c bg=#ffffff
 0  38..40  fg=#2f5bb7 bg=#eceef2 BOLD
 0  40..45  fg=#1c1c1c bg=#eceef2
 1   0..9   fg=#ffffff bg=#2f5bb7 BOLD
 1   9..10  fg=#1c1c1c bg=#ffffff
 1  10..12  fg=#2f5bb7 bg=#eceef2 BOLD
 1  12..18  fg=#1c1c1c bg=#eceef2
 1  18..19  fg=#1c1c1c bg=#ffffff
 1  19..21  fg=#2f5bb7 bg=#eceef2 BOLD
 1  21..27  fg=#1c1c1c bg=#eceef2
 1  27..28  fg=#1c1c1c bg=#ffffff
 1  28..31  fg=#2f5bb7 bg=#eceef2 BOLD
 1  31..37  fg=#1c1c1c bg=#eceef2
 1  37..38  fg=#1c1c1c bg=#ffffff
 1  38..40  fg=#2f5bb7 bg=#eceef2 BOLD
 1  40..45  fg=#1c1c1c bg=#eceef2
 2   0..2   fg=#2f5bb7 bg=#eceef2 BOLD
 2   2..8   fg=#1c1c1c bg=#eceef2
 2   8..9   fg=#1c1c1c bg=#ffffff
 2   9..11  fg=#2f5bb7 bg=#eceef2 BOLD
 2  11..17  fg=#1c1c1c bg=#eceef2
 2  17..18  fg=#1c1c1c bg=#ffffff
 2  18..21  fg=#2f5bb7 bg=#eceef2 BOLD
 2  21..27  fg=#1c1c1c bg=#eceef2
 2  27..28  fg=#1c1c1c bg=#ffffff
 2  28..30  fg=#2f5bb7 bg=#eceef2 BOLD
 2  30..35  fg=#1c1c1c bg=#eceef2
 2  35..36  fg=#1c1c1c bg=#ffffff
 2  36..44  fg=#ffffff bg=#2f5bb7 BOLD
 2  44..45  fg=#1c1c1c bg=#ffffff
